--- a/pt-alicunde-aae/appsettings.json
+++ b/pt-alicunde-aae/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=alicundepruebatecnica;User Id=sa;Password=YourStrong(!)Password;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
