--- a/pt-alicunde-aae/pt-alicunde-aae.csproj
+++ b/pt-alicunde-aae/pt-alicunde-aae.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>pt_alicunde_aae</RootNamespace>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
