--- a/pt-alicunde-aae/appsettings.json
+++ b/pt-alicunde-aae/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=alicundepruebatecnica;User Id=sa;Password=YourStrong(!)Password;TrustServerCertificate=True;"
+    "DefaultConnection": "DB_CONNECTION_STRING"
   },
   "Logging": {
     "LogLevel": {
